--- a/style.css
+++ b/style.css
@@ -53,3 +53,91 @@
   text-decoration: none;
 }
 
+
+
+
+
+
+/* why web develop section */
+
+#why-web-development{
+  width: 1140px;
+  height: 1393px;
+  border-radius: 15px;
+  background: rgba(13, 19, 33, 0.02);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 80px 100px ;
+  margin: 0 auto;
+  margin-top: 80px;    
+}
+.development-content{
+  width: 946px;
+  height: 1233px;
+  border: 3px solid rebeccapurple;
+}
+.development-heading{
+padding: 0 30px;
+}
+.development-heading h1{
+  color: rgb(13, 19, 33);
+  font-size: 32px;
+  font-weight: 800;
+  line-height: 37px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.development-heading p{
+  color: rgb(13, 19, 33);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+
+.do-in-development{
+width: 946px;
+height: 336px;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 30px;
+  background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+}
+.left-content1{
+width: 477px;
+height: 200px;
+display: flex;
+flex-direction: column;
+align-items: start;
+justify-content: space-between;
+}
+.left-content1 h1{
+color: rgba(13, 19, 33, 0.7);
+font-size: 24px;
+font-weight: 700;
+line-height: 36px;
+}
+.left-content1 p{
+color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+}
+.left-content1 a{
+color: black;
+padding: 10px;
+border: 1px solid black;
+text-decoration: none;
+}
+.right-content1{
+width: 274.17px;
+height: 240px;
+}
