--- a/style.css
+++ b/style.css
@@ -65,10 +65,6 @@
   height: 1393px;
   border-radius: 15px;
   background: rgba(13, 19, 33, 0.02);
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
   padding: 80px 100px ;
   margin: 0 auto;
   margin-top: 80px;    
@@ -76,6 +72,10 @@
 .development-content{
   width: 946px;
   height: 1233px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   border: 3px solid rebeccapurple;
 }
 .development-heading{
@@ -104,7 +104,6 @@ width: 946px;
 height: 336px;
   border-radius: 15px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: space-between;
   padding: 0 30px;
@@ -141,11 +140,6 @@ text-decoration: none;
 width: 274.17px;
 height: 240px;
 }
-
-
-
-
-
 
 
 
@@ -267,3 +261,73 @@ font-weight: 700;
 line-height: 19px;
 text-decoration-line: underline;
 }
+
+
+
+
+/* support section */
+
+#support{
+  width: 1140px;
+  height: 314px;
+  margin: 0 auto;
+  border-radius: 15px;
+  margin-bottom: 80px;
+  background-image: url("assets/handshake.jpg");
+  background: rgba(0, 0, 0, 0.6), ;
+  background-blend-mode: overlay;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.support-content{
+  width: 1044px;
+  height: 186px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: rgb(255, 255, 255);
+}
+.support-content h3{
+font-size: 32px;
+font-weight: 700;
+line-height: 36px;
+margin-bottom: 10px;
+}
+.support-content p{
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+width: 606px;
+margin-bottom: 20px;
+text-align: center;
+opacity: 0.7;
+}
+.support-content input{
+  font-size: 16px;
+  font-weight: 400;
+  width: 500px;
+  padding: 10px;
+  margin-right: 130px;
+  border-radius: 8px;
+  border: 1px solid
+  rgba(13, 19, 33, 0.15);
+}
+.support-content button{
+  font-size: 20px;
+  font-weight: 600;
+  width: 100px;
+  padding: 10px 15px;
+  border-radius: 8px;
+  border: none;
+  margin-top: -42px;
+  margin-right: -500px;
+}
+
+
+
